--- a/index.html
+++ b/index.html
@@ -269,9 +269,6 @@ Contact
 </div>
 </div>
 
-
-
-
 <div class="about-area ptb-100">
 <div class="container">
 <div class="row align-items-center justify-content-center">
@@ -289,7 +286,7 @@ Contact
 <div class="about-content-card">
 <i class="flaticon-practice"></i>
 <h3>Experience</h3>
-<p>We have 10 years of experience and have dealt with a variety of clients from different organization backgrounds</p>
+<p>We have over 10 years’ experience supplying various IT solutions to reputable organization some of which are listed in the client list. Over these years, we have developed strong relations with a variety of brand distributors to guarantee quality to our clients</p>
 </div>
 </div>
 <div class="col-lg-6 col-6">
@@ -302,63 +299,56 @@ Contact
 </div>
 </div>
 </div>
-<div class="col-lg-6">
-<div class="about-img">
- <img src="assets/images/about/about-img1.png" alt="About Images">
-<!-- <div class="sub-content">
-<img src="assets/images/about/about-img2.jpg" alt="About Images">
-<div class="content">
-<h3>4.5k</h3>
-<span>Satisfied Clients</span>
-</div> -->
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
 
-<div class="counter-area pb-70">
-  <div class="container">
+<div class="col-lg-6"  >
+<div class="about-img">
   <div class="section-title text-center">
   <!-- <span class="sp-color2">Numbers Are Talking</span> -->
   <h2>Our Business Growth and Success Story</h2>
-  <p>10 years of experience and we have gained more expertise in areas </p>
+  <p>We are involved in virtually every aspect in the IT industry. We provide IT solutions like networking, software installation, web designing, repair and maintenance of all kinds of IT equipment.
+    We also supply the best IT equipment and accessories i.e. laptops, desktops, CCTV cameras, printers, servers, phones, routers, security gateways, firewalls and cisco equipment of all brands.
+     </p>
   </div>
   <div class="row pt-45">
-  <div class="col-lg-3 col-6 col-md-3">
-  <div class="counter-another-content">
-  <i class="flaticon-web-development"></i>
-  <h3>200+</h3>
-  <span>Delivered </span>
-  </div>
-  </div>
-  <div class="col-lg-3 col-6 col-md-3">
-  <div class="counter-another-content">
-  <i class="flaticon-consulting-1"></i>
-  <h3>100+</h3>
-  <span>IT Consulting</span>
-  </div>
-  </div>
-  <div class="col-lg-3 col-6 col-md-3">
-  <div class="counter-another-content">
-  <i class="flaticon-startup"></i>
-  <h3>300+</h3>
-  <span>Areas covered</span>
-  </div>
-  </div>
-  <div class="col-lg-3 col-6 col-md-3">
-  <div class="counter-another-content">
-  <i class="flaticon-tick"></i>
-  <h3>600+</h3>
+    <div class="buttons">
+      <button class="fill">
+        <h3><i class="flaticon-web-development"></i>200+</h3>
+  <span>Delivered projects </span>
+      </button>
+
+      <button class="close">
+         <h3> <i class="flaticon-consulting-1"></i>100+</h3>
+  <span>IT Consulting projects</span>
+      </button>
+
+      <button class="up">
+           <h3> <i class="flaticon-startup"></i>300+</h3>
+  <span>project areas covered</span>
+      </button>
+
+      <button class="slide">
+    <h3> <i class="flaticon-tick"></i>600+</h3>
   <span>Projects Completed</span>
+      </button>
+   </div>
+
+  <img src="assets/images/about/about-img1.png" alt="About Images" style="width:50%;">
+  <img src="assets/images/home-one/home-one-img2.jpg" alt="About Images" style="width:50%;">
   </div>
   </div>
   </div>
-  </div></div>
+
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 
 
 
+<section class="about-background">
 <section class="services-area pt-100 pb-70">
 <div class="container">
   <div class="section-title text-center">
@@ -369,12 +359,12 @@ Contact
         <div class="logo-scroller__row">
           <div class="logo-scroller__item">
             <div class="logo-scroller__logo">
-              <img src="assets/images/brand-logo/HP.png" alt="Images">
+              <img src="assets/images/brand-logo/HP.png" alt="Images" style="width:100%; height:100%">
             </div>
           </div>
           <div class="logo-scroller__item">
             <div class="logo-scroller__logo">
-              <img src="assets/images/brand-logo/DELL.png" alt="Images">
+              <img src="assets/images/brand-logo/DELL.png" alt="Images" style="width:100%; height:100%";>
             </div>
           </div>
           <div class="logo-scroller__item">
@@ -404,7 +394,7 @@ Contact
           </div>
           <div class="logo-scroller__item">
             <div class="logo-scroller__logo">
-              <img src="assets/images/brand-logo/ids-removebg-preview.png" alt="Images">
+              <img src="assets/images/brand-logo/ids-removebg-preview.png" alt="Images" style="width:100%; height:100%">
             </div>
           </div>
         </div>
@@ -442,30 +432,23 @@ Contact
           </div>
           <div class="logo-scroller__item">
             <div class="logo-scroller__logo">
-              <img src="assets/images/brand-logo/aruba-removebg-preview.png" alt="Images">
+              <img src="assets/images/brand-logo/aruba-removebg-preview.png" alt="Images" style="width:100%; height:100%">
             </div>
           </div>
           <div class="logo-scroller__item">
             <div class="logo-scroller__logo">
-              <img src="assets/images/brand-logo/cisco-removebg-preview.png" alt="Images">
+              <img src="assets/images/brand-logo/cisco-removebg-preview.png" alt="Images" style="width:100%; height:100%"> 
             </div>
           </div>
         </div>
       </div>
-      
-      <div class="logo-scroller__actions">
-        <button class="logo-scroller__pause">Pause</button>
-      </div>
-    </div>
-   
+
 <!--  -->
- 
-<div class="service-shape">
-<img src="assets/images/shape/service-shape1.png" alt="Images">
-</div>
+</section>
 </section>
 
-<div class="about-area ptb-100">
+
+<div class="about-area ptb-100" >
   <div class="container">
   <div class="row justify-content-center align-items-center">
   <div class="col-lg-6">
@@ -578,8 +561,6 @@ Contact
   </div>
   </section> -->
 
-
-
 <div class="counter-shape">
 <div class="shape1">
 <img src="assets/images/shape/shape1.png" alt="Images">
@@ -589,6 +570,7 @@ Contact
 </div>
 </div>
 </div>
+</section>
 
 <!-- projects -->
 
@@ -630,7 +612,6 @@ Contact
   </li>
  
 </ul>
-</section>
 
 
 
